# CMakeTest

./: CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  hallo.cpp  hallo.h
src/Test123/: CMakeLists.txt  test.cpp  test.h
